# uni-ir

./: .gitignore  README.md  commitlint.config.js  docker-compose.yaml  docker-compose.yaml.old  main.py  pyproject.toml
uni_ir/: elastic.py  formatting.py  load.py  unstructured.py
uni_ir/base/: __init__.py  index.py  store.py
uni_ir/expand/: reranker.py
uni_ir/index/: __init__.py  lexical.py  vector.py
uni_ir/load/: __init__.py  captioner.py  chunker.py  loader.py
uni_ir/prompts/: prompt.py
uni_ir/retrieve/: __init__.py  base.py  hybrid.py  lexical.py  reranker.py  vector.py
uni_ir/search/analyze/: __init__.py  analyzer.py
uni_ir/search/index/: __init__.py  base.py  dense.py  lexical.py
uni_ir/search/retrieve/: __init__.py  base.py  fusion.py  hybrid.py  index.py  rrf.py
uni_ir/store/: __init__.py  base.py  document.py  filter.py  in_memory.py
uni_ir/utils/: formatting.py  prompt.py
