[tool.poetry]
name = "uni-ir"
version = "0.1.0"
description = ""
authors = ["Wojciechm-AdapptLimited <wojciech.maczka@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain = "^0.1.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
