[tool.poetry]
name = "uni-ir"
version = "0.1.0"
description = ""
authors = ["Wojciechm-AdapptLimited <wojciech.maczka@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain = "^0.1.15"
unstructured = {extras = ["all-docs"], version = "^0.13.2"}
langchain-experimental = "^0.0.57"
python-dotenv = "^1.0.1"
langchain-elasticsearch = "^0.1.2"
sentence-transformers = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
